@@ -13,6 +13,7 @@ import uk.gov.hmcts.reform.professionalapi.controller.feign.UserProfileFeignClie
 import uk.gov.hmcts.reform.professionalapi.controller.internal.OrganisationInternalController;
 import uk.gov.hmcts.reform.professionalapi.controller.request.PbaRequest;
 import uk.gov.hmcts.reform.professionalapi.controller.request.UserProfileCreationRequest;
+import uk.gov.hmcts.reform.professionalapi.controller.request.validator.impl.OrganisationIdentifierValidatorImpl;
 import uk.gov.hmcts.reform.professionalapi.controller.response.ProfessionalUsersEntityResponse;
 import uk.gov.hmcts.reform.professionalapi.controller.response.ProfessionalUsersResponse;
 import uk.gov.hmcts.reform.professionalapi.controller.response.UserProfileCreationResponse;
@@ -25,6 +26,7 @@ import uk.gov.hmcts.reform.professionalapi.domain.PbaStatus;
 import uk.gov.hmcts.reform.professionalapi.domain.ProfessionalUser;
 import uk.gov.hmcts.reform.professionalapi.domain.SuperUser;
 import uk.gov.hmcts.reform.professionalapi.repository.OrganisationRepository;
+import uk.gov.hmcts.reform.professionalapi.repository.PaymentAccountRepository;
 import uk.gov.hmcts.reform.professionalapi.service.MfaStatusService;
 import uk.gov.hmcts.reform.professionalapi.service.PaymentAccountService;
 import uk.gov.hmcts.reform.professionalapi.service.PrdEnumService;
@@ -34,13 +36,15 @@ import java.io.IOException;
 import java.nio.charset.Charset;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.ArgumentMatchers.anySet;
 import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.reform.professionalapi.pact.util.PactUtils.getOrgWithMfaStatus;
@@ -50,6 +54,9 @@ import static uk.gov.hmcts.reform.professionalapi.pact.util.PactUtils.getOrgWith
 public class OrganisationalInternalControllerProviderTest extends MockMvcProviderTest {
     @Autowired
     OrganisationRepository organisationRepository;
+
+    @Autowired
+    PaymentAccountRepository paymentAccountRepository;
 
     @Autowired
     ProfessionalUserService professionalUserService;
@@ -71,6 +78,9 @@ public class OrganisationalInternalControllerProviderTest extends MockMvcProvide
 
     @Autowired
     MappingJackson2HttpMessageConverter httpMessageConverter;
+
+    @Autowired
+    OrganisationIdentifierValidatorImpl organisationIdentifierValidatorImplMock;
 
     @Override
     void setController() {
@@ -102,7 +112,7 @@ public class OrganisationalInternalControllerProviderTest extends MockMvcProvide
             "companyN", false, "www.org.com");
         addSuperUser(organisation);
 
-        when(organisationRepository.findByStatus(OrganisationStatus.ACTIVE)).thenReturn(Arrays.asList(organisation));
+        when(organisationRepository.findByStatus(OrganisationStatus.ACTIVE)).thenReturn(List.of(organisation));
 
         ProfessionalUsersEntityResponse professionalUsersEntityResponse = new ProfessionalUsersEntityResponse();
         List<ProfessionalUsersResponse> userProfiles = new ArrayList<>();
@@ -133,7 +143,7 @@ public class OrganisationalInternalControllerProviderTest extends MockMvcProvide
         when(professionalUserService
             .findProfessionalUserByEmailAddress(anyString())).thenReturn(pu);
 
-        when(prdEnumService.getPrdEnumByEnumType(any())).thenReturn(Arrays.asList("role"));
+        when(prdEnumService.getPrdEnumByEnumType(any())).thenReturn(List.of("role"));
 
         UserProfileCreationResponse userProfileCreationResponse = getUserProfileCreationResponse();
 
@@ -181,6 +191,21 @@ public class OrganisationalInternalControllerProviderTest extends MockMvcProvide
         when(organisationRepository.findByOrganisationIdentifier(anyString())).thenReturn(getOrgWithMfaStatus());
     }
 
+    @State("Update an Organisation's PBA accounts")
+    public void setUpOrganisationForUpdatingPBAs() {
+        Organisation organisation = new Organisation("Org-Name", OrganisationStatus.ACTIVE, "sra-id",
+                "companyN", false, "www.org.com");
+
+        PaymentAccount paymentAccount = new PaymentAccount("PBA1234567");
+        paymentAccount.setOrganisation(organisation);
+
+        doNothing().when(organisationIdentifierValidatorImplMock).validateOrganisationIsActive(any(), any());
+        when(organisationRepository.findByOrganisationIdentifier(anyString())).thenReturn(organisation);
+        when(paymentAccountRepository.findByPbaNumberIn(anySet())).thenReturn(List.of(paymentAccount));
+        when(paymentAccountRepository.saveAll(anyList())).thenReturn(List.of(paymentAccount));
+    }
+
+
     private void addSuperUser(Organisation organisation) {
         SuperUser superUser = new SuperUser("some-fname", "some-lname",
             "some-email-address", organisation);
@@ -201,7 +226,7 @@ public class OrganisationalInternalControllerProviderTest extends MockMvcProvide
         contactInformation.setAddressLine2("addressLine2");
         contactInformation.setCountry("country");
         contactInformation.setPostCode("HA5 1BJ");
-        organisation.setContactInformations(Arrays.asList(contactInformation));
+        organisation.setContactInformations(List.of(contactInformation));
         return organisation;
     }
 
